[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Blockchain core dependencies
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# P2P networking
libp2p = { version = "0.40", features = ["tcp-tokio", "mdns", "floodsub", "noise", "mplex"] }
tokio = { version = "1", features = ["full", "rt", "rt-multi-thread", "macros"] }
futures = "0.3"

# Utilities
log = "0.4"
env_logger = "0.9"
once_cell = "1.8"
clap = "2.33"

# Crypto dependencies
rand = "0.8"

# Explicit dependency to fix version conflict
subtle = "2.4.1"